# rusty-exception

./: .gitignore  README.md  pyproject.toml
exception/: __init__.py  option_.py  result.py  types_.py
tests/: test_option_.py  test_result.py
